--- a/src/app/software/component/activity-collection-list/activity-collection-list.component.html
+++ b/src/app/software/component/activity-collection-list/activity-collection-list.component.html
@@ -84,6 +84,12 @@
                         <mat-cell fxFlex="100px" *matCellDef="let row"> {{row.CollectionDate}} </mat-cell>
                     </ng-container>
 
+                    <ng-container matColumnDef="ManualNumber">
+                        <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> Manual OR No.
+                        </mat-header-cell>
+                        <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.ManualNumber}} </mat-cell>
+                    </ng-container>
+
                     <ng-container matColumnDef="Customer">
                         <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Customer
                         </mat-header-cell>
@@ -103,7 +109,7 @@
                                 (click)="$event.preventDefault()"></mat-checkbox>
                         </mat-cell>
                     </ng-container>
-                    
+
                     <ng-container matColumnDef="Space">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
                         <mat-cell *matCellDef="let row">
