--- a/src/app/software/component/setup-unit-detail/setup-unit-detail.component.html
+++ b/src/app/software/component/setup-unit-detail/setup-unit-detail.component.html
@@ -133,4 +133,125 @@
             </div>
         </div>
     </div>
+    <mat-divider></mat-divider>
+    <mat-tab-group mat-align-tabs="start">
+        <mat-tab label="Unit History">
+            <div class="software-container">
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-form-field appearance="fill" style="width: 100%;">
+                            <mat-label>Filter</mat-label>
+                            <input matInput (keyup)="soldUnitFilter($event)" placeholder="Filter" #soldUnitFilterData />
+                        </mat-form-field>
+                    </div>
+                </div>
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-table [dataSource]="soldUnitDataSource" #soldUnitSort="matSort" matSort
+                            style="overflow-x: scroll;">
+
+                            <ng-container matColumnDef="SoldUnitNumber">
+                                <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> Sold Unit No.
+                                </mat-header-cell>
+                                <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.SoldUnitNumber}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="SoldUnitDate">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header> Date
+                                </mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row"> {{row.SoldUnitDate}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Project">
+                                <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Project
+                                </mat-header-cell>
+                                <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Project}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Customer">
+                                <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Customer
+                                </mat-header-cell>
+                                <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Customer}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Broker">
+                                <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Broker
+                                </mat-header-cell>
+                                <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Broker}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Price">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Price
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row">
+                                    <div style="width: 100%; text-align: right; padding-right: 10px;">
+                                        {{ decimalPipe.transform(row.Price, "1.2-2") }}
+                                    </div>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="PriceDiscount">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Discount
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row">
+                                    <div style="width: 100%; text-align: right; padding-right: 10px;">
+                                        {{ decimalPipe.transform(row.PriceDiscount, "1.2-2") }}
+                                    </div>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="PricePayment">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Payment
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row">
+                                    <div style="width: 100%; text-align: right; padding-right: 10px;">
+                                        {{ decimalPipe.transform(row.PricePayment, "1.2-2") }}
+                                    </div>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="PriceBalance">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Balance
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row">
+                                    <div style="width: 100%; text-align: right; padding-right: 10px;">
+                                        {{ decimalPipe.transform(row.PriceBalance, "1.2-2") }}
+                                    </div>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Status">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Status
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Status}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="IsLocked">
+                                <mat-header-cell fxFlex="50px" *matHeaderCellDef mat-sort-header> L </mat-header-cell>
+                                <mat-cell fxFlex="50px" *matCellDef="let row" style="text-align: center !important;">
+                                    <mat-checkbox color="primary" [checked]="row.IsLocked" [disableRipple]="true"
+                                        (click)="$event.preventDefault()"></mat-checkbox>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Space">
+                                <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
+                                <mat-cell *matCellDef="let row">
+                                </mat-cell>
+                            </ng-container>
+
+                            <mat-header-row *matHeaderRowDef="soldUnitDisplayedColumns"></mat-header-row>
+                            <mat-row *matRowDef="let row; columns: soldUnitDisplayedColumns;"></mat-row>
+
+                            <!-- <tr class="mat-row" *matNoDataRow>
+                                <td class="mat-cell" colspan="9">No data matching the filter "{{soldUnitFilterData.value}}"</td>
+                            </tr> -->
+                        </mat-table>
+
+                        <mat-paginator #soldUnitPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
+                    </div>
+                </div>
+            </div>
+        </mat-tab>
+    </mat-tab-group>
 </div>
