--- a/src/app/software/component/activity-sold-unit-equity-schedule-detail/activity-sold-unit-equity-schedule-detail.component.html
+++ b/src/app/software/component/activity-sold-unit-equity-schedule-detail/activity-sold-unit-equity-schedule-detail.component.html
@@ -10,61 +10,68 @@
     <div *ngIf="isContentShow">
         <div class="software-container">
             <div fxLayout="row" fxLayout.xs="column">
-                <div fxFlex="100" style="padding: 5px;">
+                <div fxFlex="50" style="padding: 5px;">
                     <mat-form-field appearance="fill" style="width: 100%;">
                         <mat-label>Payment Date</mat-label>
                         <input matInput [(ngModel)]="trnSoldUnitEquityScheduleModel.PaymentDate"
                             [ngModelOptions]="{standalone: true}" disabled>
                     </mat-form-field>
                 </div>
-            </div>
-
-            <div fxLayout="row" fxLayout.xs="column">
-                <div fxFlex="100" style="padding: 5px;">
+                <div fxFlex="50" style="padding: 5px;">
                     <mat-form-field appearance="fill" style="width: 100%;">
                         <mat-label>Amortization</mat-label>
-                        <input matInput [(ngModel)]="trnSoldUnitEquityScheduleModel.Amortization"
-                            [ngModelOptions]="{standalone: true}" disabled>
+                        <input matInput [(ngModel)]="soldUnitEquityScheduleAmount" [ngModelOptions]="{standalone: true}"
+                            style="text-align: right;" disabled>
                     </mat-form-field>
                 </div>
             </div>
-
             <div fxLayout="row" fxLayout.xs="column">
-                <div fxFlex="100" style="padding: 5px;">
+                <div fxFlex="50" style="padding: 5px;">
+                    <mat-form-field appearance="fill" style="width: 100%;">
+                        <mat-label>Paid Amount</mat-label>
+                        <input matInput [(ngModel)]="soldUnitEquitySchedulePaidAmount"
+                            [ngModelOptions]="{standalone: true}" style="text-align: right;" disabled>
+                    </mat-form-field>
+                </div>
+                <div fxFlex="50" style="padding: 5px;">
+                    <mat-form-field appearance="fill" style="width: 100%;">
+                        <mat-label>Balance</mat-label>
+                        <input matInput [(ngModel)]="soldUnitEquityScheduleBalanceAmount"
+                            [ngModelOptions]="{standalone: true}" style="text-align: right;" disabled>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div fxLayout="row" fxLayout.xs="column">
+                <div fxFlex="50" style="padding: 5px;">
                     <mat-form-field appearance="fill" style="width: 100%;">
                         <mat-label>Check Number</mat-label>
                         <input matInput [(ngModel)]="trnSoldUnitEquityScheduleModel.CheckNumber"
-                            [ngModelOptions]="{standalone: true}" >
+                            [ngModelOptions]="{standalone: true}">
                     </mat-form-field>
                 </div>
-            </div>
-
-            <div fxLayout="row" fxLayout.xs="column">
-                <div fxFlex="100" style="padding: 5px;">
+                <div fxFlex="50" style="padding: 5px;">
                     <mat-form-field appearance="fill" style="width: 100%;">
                         <mat-label>Check Date</mat-label>
                         <input matInput [(ngModel)]="trnSoldUnitEquityScheduleModel.CheckDate"
-                            [ngModelOptions]="{standalone: true}" >
+                            [ngModelOptions]="{standalone: true}">
                     </mat-form-field>
                 </div>
             </div>
-
             <div fxLayout="row" fxLayout.xs="column">
                 <div fxFlex="100" style="padding: 5px;">
                     <mat-form-field appearance="fill" style="width: 100%;">
                         <mat-label>Check Bank</mat-label>
                         <input matInput [(ngModel)]="trnSoldUnitEquityScheduleModel.CheckBank"
-                            [ngModelOptions]="{standalone: true}" >
+                            [ngModelOptions]="{standalone: true}">
                     </mat-form-field>
                 </div>
             </div>
-
             <div fxLayout="row" fxLayout.xs="column">
                 <div fxFlex="100" style="padding: 5px;">
                     <mat-form-field appearance="fill" style="width: 100%;">
                         <mat-label>Remarks</mat-label>
                         <textarea matInput [(ngModel)]="trnSoldUnitEquityScheduleModel.Remarks"
-                            [ngModelOptions]="{standalone: true}" ></textarea>
+                            [ngModelOptions]="{standalone: true}" rows="5"></textarea>
                     </mat-form-field>
                 </div>
             </div>
