--- a/src/app/software/component/activity-collection-detail/activity-collection-detail.component.html
+++ b/src/app/software/component/activity-collection-detail/activity-collection-detail.component.html
@@ -199,9 +199,13 @@
                             <ng-container matColumnDef="Amount">
                                 <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Amount
                                 </mat-header-cell>
-                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Amount}} </mat-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row">
+                                    <div style="width: 100%; text-align: right; padding-right: 10px;">
+                                        {{decimalPipe.transform(row.Amount, "1.2-2")}}
+                                    </div>
+                                </mat-cell>
                             </ng-container>
-                            
+
                             <ng-container matColumnDef="Agent">
                                 <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Agent
                                 </mat-header-cell>
