--- a/src/app/software/component/reports/reports.component.html
+++ b/src/app/software/component/reports/reports.component.html
@@ -701,4 +701,84 @@
             </div>
         </div>
     </mat-tab>
+    <mat-tab label="Collection Report">
+        <div *ngIf="isSpinnerShowRepCollectionReport" style="padding: 100px 0px 50px 0px; text-align: center;">
+            <h4>Please wait...</h4>
+            <mat-spinner style="margin:auto;display:block;"></mat-spinner>
+        </div>
+        <div [hidden]="!isContentShowRepCollectionReport">
+            <div class="software-container">
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-form-field appearance="fill" style="width: 100%;">
+                            <mat-label>Filter</mat-label>
+                            <input matInput (keyup)="collectionReportFilter($event)" placeholder="Filter"
+                                #collectionReportFilterData />
+                        </mat-form-field>
+                    </div>
+                </div>
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-table [dataSource]="collectionReportDataSource" #collectionReportSort="matSort" matSort
+                            style="overflow-x: scroll;">
+
+                            <ng-container matColumnDef="ManualNumber">
+                                <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> Manual OR No.
+                                </mat-header-cell>
+                                <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.CollectionManualNumber}}
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="ORDate">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header> OR Date
+                                </mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row"> {{row.CollectionDate}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Customer">
+                                <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Customer
+                                </mat-header-cell>
+                                <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.CollectionCustomer}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="PayType">
+                                <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Pay Type
+                                </mat-header-cell>
+                                <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.PayType}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Amount">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Amount
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row">
+                                    <div style="width: 100%; text-align: right; padding-right: 10px;">
+                                        {{ decimalPipe.transform(row.Amount, "1.2-2") }}
+                                    </div>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="PreparedBy">
+                                <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Prepared By
+                                </mat-header-cell>
+                                <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.CollectionPreparedBy}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Space">
+                                <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
+                                <mat-cell *matCellDef="let row">
+                                </mat-cell>
+                            </ng-container>
+
+                            <mat-header-row *matHeaderRowDef="collectionReportDisplayedColumns"></mat-header-row>
+                            <mat-row *matRowDef="let row; columns: collectionReportDisplayedColumns;"></mat-row>
+
+                        </mat-table>
+
+                        <mat-paginator #collectionReportPaginator [pageSizeOptions]="[10, 50, 100, 200]">
+                        </mat-paginator>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </mat-tab>
 </mat-tab-group>
