--- a/src/app/software/component/system-user-list/system-user-list.component.html
+++ b/src/app/software/component/system-user-list/system-user-list.component.html
@@ -1,1 +1,89 @@
-<p>system-user-list works!</p>
+<div *ngIf="isSpinnerShow" style="padding: 100px 0px 15px 0px; text-align: center;">
+    <h4>Please wait...</h4>
+    <mat-spinner style="margin:auto;display:block;"></mat-spinner>
+</div>
+<div [hidden]="!isContentShow">
+    <mat-toolbar>
+        &nbsp;&nbsp;
+        <img src="../../../../assets/images/software-icons/user.png" class="toolBar-img-style" />
+        <span class="toolbar-title-style">
+            User
+        </span>
+        <span class="toolbar-spacer"></span>
+        <button mat-flat-button color="primary" style="margin-right: 5px;" (click)="buttonAddUser()"
+            [disabled]="isButtonAddUserDisabled">
+            Add
+        </button>
+        <button mat-flat-button color="warn" routerLink="/software">
+            Close
+        </button>
+    </mat-toolbar>
+    <mat-divider></mat-divider>
+    <div class="software-container">
+        <div fxLayout="row" fxLayout.xs="column">
+            <div fxFlex="100" style="padding: 5px;">
+                <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-label>Filter</mat-label>
+                    <input matInput (keyup)="userFilter($event)" placeholder="Filter" #userFilterData />
+                </mat-form-field>
+            </div>
+        </div>
+        <div fxLayout="row" fxLayout.xs="column">
+            <div fxFlex="100" style="padding: 5px;">
+                <mat-table [dataSource]="userDataSource" #userSort="matSort" matSort style="overflow-x: scroll;">
+
+                    <ng-container matColumnDef="ButtonEdit">
+                        <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                        <mat-cell fxFlex="100px" *matCellDef="let row">
+                            <button mat-flat-button color="primary" (click)="buttonEditUser(row)">
+                                Edit
+                            </button>
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="ButtonDelete">
+                        <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                        <mat-cell fxFlex="100px" *matCellDef="let row">
+                            <button mat-flat-button color="warn" (click)="buttonDeleteUser(row)">
+                                Delete
+                            </button>
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Username">
+                        <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> Username
+                        </mat-header-cell>
+                        <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.Username}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="FullName">
+                        <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> FullName </mat-header-cell>
+                        <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.FullName}} </mat-cell>
+                    </ng-container>
+
+                   
+
+                    <ng-container matColumnDef="Status">
+                        <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
+                        <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Status}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Space">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
+                        <mat-cell *matCellDef="let row">
+                        </mat-cell>
+                    </ng-container>
+
+                    <mat-header-row *matHeaderRowDef="userDisplayedColumns"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: userDisplayedColumns;"></mat-row>
+
+                    <!-- <tr class="mat-row" *matNoDataRow>
+                        <td class="mat-cell" colspan="8">No data matching the filter "{{UserFilterData.value}}"</td>
+                    </tr> -->
+                </mat-table>
+
+                <mat-paginator #userPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
+            </div>
+        </div>
+    </div>
+</div>
