--- a/src/app/software/component/system-user-detail/system-user-detail.component.html
+++ b/src/app/software/component/system-user-detail/system-user-detail.component.html
@@ -26,8 +26,7 @@
                     <div fxFlex="50" style="padding: 5px;">
                         <mat-form-field appearance="fill" style="width: 100%;">
                             <mat-label>Username</mat-label>
-                            <input matInput [(ngModel)]="mstUserModel.Username" [ngModelOptions]="{standalone: true}"
-                                disabled>
+                            <input matInput [(ngModel)]="mstUserModel.Username" [ngModelOptions]="{standalone: true}" >
                         </mat-form-field>
                     </div>
                     <div fxFlex="50" style="padding: 5px;">
@@ -59,4 +58,102 @@
             </div>
         </div>
     </div>
+    <mat-divider></mat-divider>
+    <mat-tab-group mat-align-tabs="start">
+        <mat-tab label="User Rights">
+            <div class="software-container">
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 3px; text-align: right;">
+                        <button mat-flat-button color="primary" (click)="buttonAddUserRights()">
+                            Add
+                        </button>
+                    </div>
+                </div>
+
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-table [dataSource]="userRightsDataSource" #userRightsSort="matSort" matSort
+                            style="overflow-x: scroll;">
+
+                            <ng-container matColumnDef="ButtonEdit">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row">
+                                    <button mat-flat-button color="primary" (click)="buttonEditUserRights(row)">
+                                        Edit
+                                    </button>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="ButtonDelete">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row">
+                                    <button mat-flat-button color="warn" (click)="buttonDeleteUserRights(row)">
+                                        Delete
+                                    </button>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Page">
+                                <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> Page
+                                </mat-header-cell>
+                                <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.Page}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="CanEdit">
+                                <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> Can Edit
+                                </mat-header-cell>
+                                <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.CanEdit}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="CanSave">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Can Save
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.CanSave}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="CanLock">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Can Lock
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.CanLock}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="CanUnLock">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Can UnLock
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.CanUnLock}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="CanPrint">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Can Print
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.CanPrint}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="CanDelete">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Can Delete
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.CanDelete}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Space">
+                                <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
+                                <mat-cell *matCellDef="let row">
+                                </mat-cell>
+                            </ng-container>
+
+                            <mat-header-row *matHeaderRowDef="userRightsDisplayedColumns"></mat-header-row>
+                            <mat-row *matRowDef="let row; columns: userRightsDisplayedColumns;"></mat-row>
+
+                            <!-- <tr class="mat-row" *matNoDataRow>
+                                <td class="mat-cell" colspan="6">No data matching the filter
+                                    "{{houseModelFilterData.value}}"</td>
+                            </tr> -->
+                        </mat-table>
+
+                        <mat-paginator #userRightsPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
+                    </div>
+                </div>
+            </div>
+        </mat-tab>
+    </mat-tab-group>
 </div>
