--- a/src/app/software/software.component.html
+++ b/src/app/software/software.component.html
@@ -101,7 +101,7 @@
                             </a>
                         </mat-nav-list>
                     </mat-expansion-panel>
-                    <!-- 
+
                     <mat-expansion-panel class="mat-elevation-z0" style="margin: 5px;">
                         <mat-expansion-panel-header>
                             <mat-panel-title>
@@ -116,13 +116,13 @@
                                 <img src="./../../assets/images/software-icons/user.png" height="30" />
                                 &nbsp;&nbsp; User
                             </a>
-                            <a mat-list-item routerLink="/software/system-settings"
+                            <!-- <a mat-list-item routerLink="/software/system-settings"
                                 style="height: auto; padding: 10px 0px;">
                                 <img src="./../../assets/images/software-icons/settings.png" height="30" />
                                 &nbsp;&nbsp; Settings
-                            </a>
+                            </a> -->
                         </mat-nav-list>
-                    </mat-expansion-panel> -->
+                    </mat-expansion-panel>
 
                     <mat-expansion-panel class="mat-elevation-z0" style="margin: 5px;" hideToggle>
                         <mat-expansion-panel-header routerLink="/software/reports" #reportPanelHeader
