--- a/src/app/software/component/system-user-detail/system-user-detail.component.html
+++ b/src/app/software/component/system-user-detail/system-user-detail.component.html
@@ -1,7 +1,7 @@
-<!-- <div *ngIf="isSpinnerShow" style="padding: 100px 0px 15px 0px; text-align: center;">
+<div *ngIf="isSpinnerShow" style="padding: 80px 0px 15px 0px; text-align: center;">
     <h4>Please wait...</h4>
     <mat-spinner style="margin:auto;display:block;"></mat-spinner>
-</div> -->
+</div>
 <div *ngIf="isContentShow">
     <mat-toolbar>
         &nbsp;&nbsp;
@@ -26,7 +26,8 @@
                     <div fxFlex="50" style="padding: 5px;">
                         <mat-form-field appearance="fill" style="width: 100%;">
                             <mat-label>Username</mat-label>
-                            <input matInput [(ngModel)]="mstUserModel.Username" [ngModelOptions]="{standalone: true}" >
+                            <input matInput [(ngModel)]="mstUserModel.Username" [ngModelOptions]="{standalone: true}"
+                                disabled>
                         </mat-form-field>
                     </div>
                     <div fxFlex="50" style="padding: 5px;">
@@ -37,7 +38,7 @@
                     <div fxFlex="100" style="padding: 5px;">
                         <mat-form-field appearance="fill" style="width: 100%;">
                             <mat-label>FullName</mat-label>
-                            <input matInput [(ngModel)]="mstUserModel.FullName" [ngModelOptions]="{standalone: true}"  >
+                            <input matInput [(ngModel)]="mstUserModel.FullName" [ngModelOptions]="{standalone: true}">
                         </mat-form-field>
                     </div>
                 </div>
@@ -69,7 +70,6 @@
                         </button>
                     </div>
                 </div>
-
                 <div fxLayout="row" fxLayout.xs="column">
                     <div fxFlex="100" style="padding: 5px;">
                         <mat-table [dataSource]="userRightsDataSource" #userRightsSort="matSort" matSort
@@ -94,45 +94,81 @@
                             </ng-container>
 
                             <ng-container matColumnDef="Page">
-                                <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> Page
+                                <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> Page
                                 </mat-header-cell>
-                                <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.Page}} </mat-cell>
+                                <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.Page}} </mat-cell>
                             </ng-container>
 
                             <ng-container matColumnDef="CanEdit">
-                                <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> Can Edit
+                                <mat-header-cell fxFlex="80px" *matHeaderCellDef mat-sort-header> Edit
                                 </mat-header-cell>
-                                <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.CanEdit}} </mat-cell>
+                                <mat-cell fxFlex="80px" *matCellDef="let row">
+                                    <div style="width: 100%; text-align: center; padding-right: 10px;">
+                                        <mat-checkbox color="primary" [checked]="row.CanEdit" [disableRipple]="true"
+                                            (click)="$event.preventDefault()">
+                                        </mat-checkbox>
+                                    </div>
+                                </mat-cell>
                             </ng-container>
 
                             <ng-container matColumnDef="CanSave">
-                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Can Save
+                                <mat-header-cell fxFlex="80px" *matHeaderCellDef mat-sort-header> Save
                                 </mat-header-cell>
-                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.CanSave}} </mat-cell>
+                                <mat-cell fxFlex="80px" *matCellDef="let row">
+                                    <div style="width: 100%; text-align: center; padding-right: 10px;">
+                                        <mat-checkbox color="primary" [checked]="row.CanSave" [disableRipple]="true"
+                                            (click)="$event.preventDefault()">
+                                        </mat-checkbox>
+                                    </div>
+                                </mat-cell>
                             </ng-container>
 
                             <ng-container matColumnDef="CanLock">
-                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Can Lock
+                                <mat-header-cell fxFlex="80px" *matHeaderCellDef mat-sort-header> Lock
                                 </mat-header-cell>
-                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.CanLock}} </mat-cell>
+                                <mat-cell fxFlex="80px" *matCellDef="let row">
+                                    <div style="width: 100%; text-align: center; padding-right: 10px;">
+                                        <mat-checkbox color="primary" [checked]="row.CanLock" [disableRipple]="true"
+                                            (click)="$event.preventDefault()">
+                                        </mat-checkbox>
+                                    </div>
+                                </mat-cell>
                             </ng-container>
 
                             <ng-container matColumnDef="CanUnLock">
-                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Can UnLock
+                                <mat-header-cell fxFlex="80px" *matHeaderCellDef mat-sort-header> UnLock
                                 </mat-header-cell>
-                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.CanUnLock}} </mat-cell>
+                                <mat-cell fxFlex="80px" *matCellDef="let row">
+                                    <div style="width: 100%; text-align: center; padding-right: 10px;">
+                                        <mat-checkbox color="primary" [checked]="row.CanUnLock" [disableRipple]="true"
+                                            (click)="$event.preventDefault()">
+                                        </mat-checkbox>
+                                    </div>
+                                </mat-cell>
                             </ng-container>
 
                             <ng-container matColumnDef="CanPrint">
-                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Can Print
+                                <mat-header-cell fxFlex="80px" *matHeaderCellDef mat-sort-header> Print
                                 </mat-header-cell>
-                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.CanPrint}} </mat-cell>
+                                <mat-cell fxFlex="80px" *matCellDef="let row">
+                                    <div style="width: 100%; text-align: center; padding-right: 10px;">
+                                        <mat-checkbox color="primary" [checked]="row.CanPrint" [disableRipple]="true"
+                                            (click)="$event.preventDefault()">
+                                        </mat-checkbox>
+                                    </div>
+                                </mat-cell>
                             </ng-container>
 
                             <ng-container matColumnDef="CanDelete">
-                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Can Delete
+                                <mat-header-cell fxFlex="80px" *matHeaderCellDef mat-sort-header> Delete
                                 </mat-header-cell>
-                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.CanDelete}} </mat-cell>
+                                <mat-cell fxFlex="80px" *matCellDef="let row">
+                                    <div style="width: 100%; text-align: center; padding-right: 10px;">
+                                        <mat-checkbox color="primary" [checked]="row.CanDelete" [disableRipple]="true"
+                                            (click)="$event.preventDefault()">
+                                        </mat-checkbox>
+                                    </div>
+                                </mat-cell>
                             </ng-container>
 
                             <ng-container matColumnDef="Space">
