--- a/src/app/software/component/system-user-rights-detail/system-user-rights-detail.component.html
+++ b/src/app/software/component/system-user-rights-detail/system-user-rights-detail.component.html
@@ -10,53 +10,57 @@
     <div *ngIf="isContentShow">
         <div class="software-container">
             <div fxLayout="row" fxLayout.xs="column">
-                <div fxFlex="50" style="padding: 5px;">
+                <div fxFlex="100" style="padding: 5px;">
                     <mat-form-field appearance="fill" style="width: 100%;">
                         <mat-label>Page</mat-label>
-                        <input matInput [(ngModel)]="mstUserRights.Page" [ngModelOptions]="{standalone: true}" disabled>
-                    </mat-form-field>
-                </div>
-                <div fxFlex="50" style="padding: 5px;">
-                    <mat-form-field appearance="fill" style="width: 100%;">
-                        <mat-label>Edit</mat-label>
-                        <mat-slide-toggle [(ngModel)]="mstUserRights.CanEdit" [ngModelOptions]="{standalone: true}"></mat-slide-toggle>
-                    </mat-form-field>
-                </div>
-            </div>
-            <div fxLayout="row" fxLayout.xs="column">
-                <div fxFlex="50" style="padding: 5px;">
-                    <mat-form-field appearance="fill" style="width: 100%;">
-                        <mat-label>Save</mat-label>
-                        <mat-slide-toggle [(ngModel)]="mstUserRights.CanSave" [ngModelOptions]="{standalone: true}"></mat-slide-toggle>
-                    </mat-form-field>
-                </div>
-                <div fxFlex="50" style="padding: 5px;">
-                    <mat-form-field appearance="fill" style="width: 100%;">
-                        <mat-label>Lock</mat-label>
-                        <mat-slide-toggle [(ngModel)]="mstUserRights.CanLock" [ngModelOptions]="{standalone: true}"></mat-slide-toggle>
-                    </mat-form-field>
-                </div>
-            </div>
-            <div fxLayout="row" fxLayout.xs="column">
-                <div fxFlex="50" style="padding: 5px;">
-                    <mat-form-field appearance="fill" style="width: 100%;">
-                        <mat-label>Unlock</mat-label>
-                        <mat-slide-toggle [(ngModel)]="mstUserRights.CanUnlock" [ngModelOptions]="{standalone: true}"></mat-slide-toggle>
-                    </mat-form-field>
-                </div>
-                <div fxFlex="50" style="padding: 5px;">
-                    <mat-form-field appearance="fill" style="width: 100%;">
-                        <mat-label>Print</mat-label>
-                        <mat-slide-toggle [(ngModel)]="mstUserRights.CanPrint" [ngModelOptions]="{standalone: true}"></mat-slide-toggle>
+                        <mat-select [(ngModel)]="mstUserRights.PageId">
+                            <mat-option *ngFor="let sysPageObject of sysPageModel" [value]="sysPageObject.Id">
+                                {{sysPageObject.Page}}
+                            </mat-option>
+                        </mat-select>
                     </mat-form-field>
                 </div>
             </div>
             <div fxLayout="row" fxLayout.xs="column">
                 <div fxFlex="100" style="padding: 5px;">
-                    <mat-form-field appearance="fill" style="width: 100%;">
-                        <mat-label>Delete</mat-label>
-                        <mat-slide-toggle [(ngModel)]="mstUserRights.CanDelete" [ngModelOptions]="{standalone: true}"></mat-slide-toggle>
-                    </mat-form-field>
+                    <mat-slide-toggle [(ngModel)]="mstUserRights.CanEdit" [ngModelOptions]="{standalone: true}">
+                        Can Edit
+                    </mat-slide-toggle>
+                </div>
+            </div>
+            <div fxLayout="row" fxLayout.xs="column">
+                <div fxFlex="100" style="padding: 5px;">
+                    <mat-slide-toggle [(ngModel)]="mstUserRights.CanSave" [ngModelOptions]="{standalone: true}">
+                        Can Save
+                    </mat-slide-toggle>
+                </div>
+            </div>
+            <div fxLayout="row" fxLayout.xs="column">
+                <div fxFlex="100" style="padding: 5px;">
+                    <mat-slide-toggle [(ngModel)]="mstUserRights.CanLock" [ngModelOptions]="{standalone: true}">
+                        Can Lock
+                    </mat-slide-toggle>
+                </div>
+            </div>
+            <div fxLayout="row" fxLayout.xs="column">
+                <div fxFlex="100" style="padding: 5px;">
+                    <mat-slide-toggle [(ngModel)]="mstUserRights.CanUnLock" [ngModelOptions]="{standalone: true}">
+                        Can Unlock
+                    </mat-slide-toggle>
+                </div>
+            </div>
+            <div fxLayout="row" fxLayout.xs="column">
+                <div fxFlex="100" style="padding: 5px;">
+                    <mat-slide-toggle [(ngModel)]="mstUserRights.CanPrint" [ngModelOptions]="{standalone: true}">
+                        Can Print
+                    </mat-slide-toggle>
+                </div>
+            </div>
+            <div fxLayout="row" fxLayout.xs="column">
+                <div fxFlex="100" style="padding: 5px;">
+                    <mat-slide-toggle [(ngModel)]="mstUserRights.CanDelete" [ngModelOptions]="{standalone: true}">
+                        Can Delete
+                    </mat-slide-toggle>
                 </div>
             </div>
         </div>
