--- a/src/app/software/component/setup-broker-detail/setup-broker-detail.component.html
+++ b/src/app/software/component/setup-broker-detail/setup-broker-detail.component.html
@@ -2,6 +2,28 @@
     <h4>Please wait...</h4>
     <mat-spinner style="margin:auto;display:block;"></mat-spinner>
 </div>
+<div *ngIf="isPageForbidden">
+    <div class="software-container">
+        <div style="text-align: center;">
+            <div fxLayout="row" fxLayout.xs="column" style="margin-top: 25px; margin-bottom: 15px;">
+                <div fxFlex="35" style="padding: 5px;"></div>
+                <div fxFlex="30" style="padding: 5px;">
+                    <img src="./../../../../assets/error-images/Error-403_page-forbidden.png" style="width: 100%;" />
+                </div>
+                <div fxFlex="35" style="padding: 5px;"></div>
+            </div>
+            <div fxLayout="row" fxLayout.xs="column">
+                <div fxFlex="10" style="padding: 5px;"></div>
+                <div fxFlex="80" style="padding: 5px;">
+                    <h1>
+                        Sorry, this page is forbidden. You have no rights to access this page.
+                    </h1>
+                </div>
+                <div fxFlex="10" style="padding: 5px;"></div>
+            </div>
+        </div>
+    </div>
+</div>
 <div *ngIf="isContentShow">
     <mat-toolbar>
         &nbsp;&nbsp;
@@ -11,19 +33,19 @@
         </span>
         <span class="toolbar-spacer"></span>
         <button mat-flat-button color="primary" [disabled]="isBrokerSaveButtonDisabled" style="margin-right: 5px;"
-            (click)="buttonSaveBroker()">
+            (click)="buttonSaveBroker()" *ngIf="mstUserRights.CanSave == true">
             Save
         </button>
         <button mat-flat-button color="primary" [disabled]="isBrokerLockButtonDisabled" style="margin-right: 5px;"
-            (click)="buttonLockBroker()">
+            (click)="buttonLockBroker()" *ngIf="mstUserRights.CanLock == true">
             Lock
         </button>
         <button mat-flat-button color="primary" [disabled]="isBrokerUnlockButtonDisabled" style="margin-right: 5px;"
-            (click)="buttonUnlockBroker()">
+            (click)="buttonUnlockBroker()" *ngIf="mstUserRights.CanUnlock == true">
             Unlock
         </button>
         <button mat-flat-button color="primary" [disabled]="isBrokerPrintButtonDisabled" style="margin-right: 5px;"
-            (click)="buttonPrintBroker()">
+            (click)="buttonPrintBroker()" *ngIf="mstUserRights.CanPrint == true">
             Print
         </button>
         <button mat-flat-button color="warn" routerLink="/software/setup-broker-list">
