--- a/src/app/software/component/setup-unit-list/setup-unit-list.component.html
+++ b/src/app/software/component/setup-unit-list/setup-unit-list.component.html
@@ -2,6 +2,28 @@
     <h4>Please wait...</h4>
     <mat-spinner style="margin:auto;display:block;"></mat-spinner>
 </div>
+<div *ngIf="isPageForbidden">
+    <div class="software-container">
+        <div style="text-align: center;">
+            <div fxLayout="row" fxLayout.xs="column" style="margin-top: 25px; margin-bottom: 15px;">
+                <div fxFlex="35" style="padding: 5px;"></div>
+                <div fxFlex="30" style="padding: 5px;">
+                    <img src="./../../../../assets/error-images/Error-403_page-forbidden.png" style="width: 100%;" />
+                </div>
+                <div fxFlex="35" style="padding: 5px;"></div>
+            </div>
+            <div fxLayout="row" fxLayout.xs="column">
+                <div fxFlex="10" style="padding: 5px;"></div>
+                <div fxFlex="80" style="padding: 5px;">
+                    <h1>
+                        Sorry, this page is forbidden. You have no rights to access this page.
+                    </h1>
+                </div>
+                <div fxFlex="10" style="padding: 5px;"></div>
+            </div>
+        </div>
+    </div>
+</div>
 <div [hidden]="!isContentShow">
     <mat-toolbar>
         &nbsp;&nbsp;
@@ -42,7 +64,7 @@
             <div fxFlex="100" style="padding: 5px;">
                 <mat-table [dataSource]="unitDataSource" #unitSort="matSort" matSort style="overflow-x: scroll;">
 
-                    <ng-container matColumnDef="ButtonEdit">
+                    <ng-container matColumnDef="ButtonEdit" *ngIf="mstUserRights.CanEdit == true">
                         <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
                         <mat-cell fxFlex="100px" *matCellDef="let row">
                             <button mat-flat-button color="primary" (click)="buttonEditUnit(row)">
@@ -51,7 +73,7 @@
                         </mat-cell>
                     </ng-container>
 
-                    <ng-container matColumnDef="ButtonDelete">
+                    <ng-container matColumnDef="ButtonDelete" *ngIf="mstUserRights.CanDelete == true">
                         <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
                         <mat-cell fxFlex="100px" *matCellDef="let row">
                             <button mat-flat-button color="warn" (click)="buttonDeleteUnit(row)">
